tmux: vim style pane navigation

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,12 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # reload config file
 bind r source-file ~/.tmux.conf
 
