--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -227,16 +227,26 @@
 	<string>Full</string>
 	<key>Default Bookmark Guid</key>
 	<string>2D677F7C-DD84-4B28-BE4E-9BA828FB304E</string>
+	<key>DimOnlyText</key>
+	<false/>
 	<key>EnableDivisionView</key>
+	<false/>
+	<key>HideActivityIndicator</key>
+	<false/>
+	<key>HideScrollbar</key>
+	<true/>
+	<key>HideTabNumber</key>
 	<false/>
 	<key>HotkeyMigratedFromSingleToMulti</key>
 	<true/>
+	<key>JobName</key>
+	<false/>
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/dotfiles/iterm</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
-	<string>{915, 448}</string>
+	<string>{712, 448}</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -274,20 +284,20 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>318 347 794 260 0 0 1440 877 </string>
-	<key>NSWindow Frame SessionsPreferences</key>
-	<string>269 149 606 469 0 0 1440 877 </string>
+	<string>476 377 738 77 0 0 1440 877 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>270 356 796 473 0 0 1440 900 </string>
+	<string>382 280 796 473 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 80 1440 797 0 0 1440 877 </string>
+	<string>0 435 570 442 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>176 410 570 467 0 0 1440 877 </string>
+	<string>281 253 570 442 0 0 1440 877 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
 			<key>ASCII Anti Aliased</key>
 			<true/>
+			<key>Allow Title Setting</key>
+			<false/>
 			<key>Ambiguous Double Width</key>
 			<false/>
 			<key>Ansi 0 Color</key>
@@ -847,7 +857,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-			<string>Default</string>
+			<string></string>
 			<key>Non Ascii Font</key>
 			<string>InconsolataForPowerline 14</string>
 			<key>Non-ASCII Anti Aliased</key>
@@ -899,7 +909,7 @@
 			<key>Terminal Type</key>
 			<string>xterm-256color</string>
 			<key>Transparency</key>
-			<real>0.050807027284263964</real>
+			<real>0.0</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
@@ -917,7 +927,7 @@
 			<key>Visual Bell</key>
 			<false/>
 			<key>Window Type</key>
-			<integer>12</integer>
+			<integer>0</integer>
 			<key>Working Directory</key>
 			<string>/Users/Raghav</string>
 		</dict>
@@ -925,15 +935,23 @@
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
 	<key>NoSyncInstallationId</key>
-	<string>91BB991D-BB2D-4CA2-AC34-9B337E006D53</string>
+	<string>A49A16FA-709C-4D4E-A198-C55E7F0F6D3D</string>
+	<key>NoSyncLastTipTime</key>
+	<real>536739403.423576</real>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
 	<integer>1</integer>
 	<key>NoSyncPermissionToShowTip</key>
-	<false/>
+	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>532668116.297315</real>
+	<real>536159055.26095402</real>
+	<key>NoSyncTipsToNotShow</key>
+	<array>
+		<string>000</string>
+		<string>0000</string>
+		<string>0001</string>
+	</array>
 	<key>OpenArrangementAtStartup</key>
 	<true/>
 	<key>OpenNoWindowsAtStartup</key>
@@ -974,21 +992,23 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/Raghav/dotfiles/iterm</string>
+	<string>/Users/raghav/dotfiles/iterm</string>
 	<key>Print In Black And White</key>
 	<true/>
 	<key>SUEnableAutomaticChecks</key>
-	<true/>
+	<false/>
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/final.xml?shard=6</string>
+	<string>https://iterm2.com/appcasts/final.xml?shard=81</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
-	<key>SULastCheckTime</key>
-	<date>2017-12-27T23:33:40Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
+	<key>ShowBookmarkName</key>
+	<true/>
+	<key>SplitPaneDimmingAmount</key>
+	<real>0.38967097355769231</real>
 	<key>TabStyle</key>
 	<integer>1</integer>
 	<key>TerminalVMargin</key>
@@ -1036,6 +1056,8 @@
 										<dict>
 											<key>ASCII Anti Aliased</key>
 											<true/>
+											<key>Allow Title Setting</key>
+											<false/>
 											<key>Ambiguous Double Width</key>
 											<false/>
 											<key>Ansi 0 Color</key>
@@ -1284,7 +1306,7 @@
 												<real>0.44058024883270264</real>
 											</dict>
 											<key>Guid</key>
-											<string>2D677F7C-DD84-4B28-BE4E-9BA828FB304E</string>
+											<string>1802DB6D-EC32-41B1-AE0E-E4224655B9B2</string>
 											<key>Horizontal Spacing</key>
 											<real>1</real>
 											<key>Idle Code</key>
@@ -1595,15 +1617,17 @@
 											<key>Mouse Reporting</key>
 											<true/>
 											<key>Name</key>
-											<string>Default</string>
+											<string></string>
 											<key>Non Ascii Font</key>
-											<string>Monaco 12</string>
+											<string>InconsolataForPowerline 14</string>
 											<key>Non-ASCII Anti Aliased</key>
 											<true/>
 											<key>Normal Font</key>
 											<string>InconsolataForPowerline 14</string>
 											<key>Option Key Sends</key>
 											<integer>0</integer>
+											<key>Original Guid</key>
+											<string>2D677F7C-DD84-4B28-BE4E-9BA828FB304E</string>
 											<key>Prompt Before Closing 2</key>
 											<false/>
 											<key>Right Option Key Sends</key>
@@ -1642,12 +1666,25 @@
 											<integer>0</integer>
 											<key>Sync Title</key>
 											<false/>
+											<key>Tab Color</key>
+											<dict>
+												<key>Alpha Component</key>
+												<real>1</real>
+												<key>Blue Component</key>
+												<real>0.20000000000000001</real>
+												<key>Color Space</key>
+												<string>sRGB</string>
+												<key>Green Component</key>
+												<real>0.15686275064945221</real>
+												<key>Red Component</key>
+												<real>0.0</real>
+											</dict>
 											<key>Tags</key>
 											<array/>
 											<key>Terminal Type</key>
 											<string>xterm-256color</string>
 											<key>Transparency</key>
-											<real>0.050807027284263964</real>
+											<real>0.0</real>
 											<key>Unlimited Scrollback</key>
 											<false/>
 											<key>Use Bold Font</key>
@@ -1659,32 +1696,30 @@
 											<key>Use Non-ASCII Font</key>
 											<false/>
 											<key>Use Tab Color</key>
-											<false/>
+											<true/>
 											<key>Vertical Spacing</key>
 											<real>1</real>
 											<key>Visual Bell</key>
 											<false/>
 											<key>Window Type</key>
-											<integer>12</integer>
+											<integer>0</integer>
 											<key>Working Directory</key>
 											<string>/Users/Raghav</string>
 										</dict>
 										<key>Bookmark Name</key>
-										<string>Default</string>
+										<string></string>
 										<key>Columns</key>
 										<integer>204</integer>
 										<key>Commands</key>
 										<array/>
 										<key>Directories</key>
 										<array>
-											<string>/Users/Raghav</string>
-											<string>/Users/Raghav</string>
-											<string>/Users/Raghav</string>
+											<string>/Users/raghav</string>
 										</array>
 										<key>Environment</key>
 										<dict>
 											<key>PWD</key>
-											<string>/Users/Raghav</string>
+											<string>/Users/raghav</string>
 										</dict>
 										<key>Hosts</key>
 										<array/>
@@ -1693,33 +1728,31 @@
 										<key>Program</key>
 										<dict>
 											<key>Command</key>
-											<string>login -fqp "Raghav"</string>
+											<string>login -fp "raghav"</string>
 											<key>Type</key>
 											<string>Command</string>
 										</dict>
 										<key>Rows</key>
-										<integer>49</integer>
+										<integer>47</integer>
 										<key>Session Default Name</key>
-										<string>Default</string>
+										<string></string>
 										<key>Session GUID</key>
-										<string>CE0C6D37-CBA6-4FF5-99B9-0FBA9B396662</string>
+										<string>BBBC57CA-8E24-4976-A8B3-D273A4E27AE5</string>
 										<key>Session Name</key>
-										<string>~</string>
-										<key>Session Window Title</key>
-										<string>Raghav@Raghavs-Air: ~</string>
+										<string></string>
 										<key>Shell Integration Ever Used</key>
 										<false/>
 										<key>Substitutions</key>
 										<dict/>
 										<key>Working Directory</key>
-										<string>/Users/Raghav</string>
+										<string>/Users/raghav</string>
 									</dict>
 									<key>View Type</key>
 									<string>SessionView</string>
 									<key>frame</key>
 									<dict>
 										<key>height</key>
-										<real>797</real>
+										<real>775</real>
 										<key>width</key>
 										<real>1440</real>
 										<key>x</key>
@@ -1734,7 +1767,7 @@
 							<key>frame</key>
 							<dict>
 								<key>height</key>
-								<real>797</real>
+								<real>775</real>
 								<key>width</key>
 								<real>1440</real>
 								<key>x</key>
@@ -1748,11 +1781,11 @@
 					</dict>
 				</array>
 				<key>TerminalGuid</key>
-				<string>pty-2C214389-EEE2-4074-9172-EC7F4854CD21</string>
+				<string>pty-647836C6-8871-4CC5-A7E2-FE426C2D5CE0</string>
 				<key>Width</key>
 				<real>1440</real>
 				<key>Window Type</key>
-				<integer>12</integer>
+				<integer>0</integer>
 				<key>X Origin</key>
 				<real>0.0</real>
 				<key>Y Origin</key>
@@ -1760,6 +1793,8 @@
 			</dict>
 		</array>
 	</dict>
+	<key>WindowNumber</key>
+	<false/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
