--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -332,11 +332,17 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>380 339 738 77 0 0 1440 877 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>250 344 796 473 0 0 1440 877 </string>
+	<string>250 358 796 473 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>0 4 1440 873 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>281 253 570 442 0 0 1440 877 </string>
+	<string>281 254 570 442 0 0 1440 877 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>197 47 570 442 0 0 1440 877 </string>
+	<key>NSWindow Frame iTerm Window 3</key>
+	<string>218 24 570 442 0 0 1440 877 </string>
+	<key>NSWindow Frame iTerm Window 4</key>
+	<string>239 435 570 442 0 0 1440 877 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1225,208 +1231,208 @@
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.23137250542640686</real>
+												<real>0.15686270594596863</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.18823531270027161</real>
+												<real>0.15686270594596863</real>
 												<key>Red Component</key>
-												<real>0.16862747073173523</real>
+												<real>0.15686273574829102</real>
 											</dict>
 											<key>Ansi 1 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.4156862199306488</real>
+												<real>0.20392152667045593</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.38039213418960571</real>
+												<real>0.28627443313598633</real>
 												<key>Red Component</key>
-												<real>0.74901968240737915</real>
+												<real>0.98431378602981567</real>
 											</dict>
 											<key>Ansi 10 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.54901951551437378</real>
+												<real>0.14901953935623169</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.74509817361831665</real>
+												<real>0.7333332896232605</real>
 												<key>Red Component</key>
-												<real>0.63921576738357544</real>
+												<real>0.721568763256073</real>
 											</dict>
 											<key>Ansi 11 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.54509800672531128</real>
+												<real>0.18431368470191956</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.79607844352722168</real>
+												<real>0.74117642641067505</real>
 												<key>Red Component</key>
-												<real>0.92156857252120972</real>
+												<real>0.98039215803146362</real>
 											</dict>
 											<key>Ansi 12 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.70196080207824707</real>
+												<real>0.59607839584350586</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.63137257099151611</real>
+												<real>0.64705884456634521</real>
 												<key>Red Component</key>
-												<real>0.56078433990478516</real>
+												<real>0.51372557878494263</real>
 											</dict>
 											<key>Ansi 13 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.67843133211135864</real>
+												<real>0.60784310102462769</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.55686271190643311</real>
+												<real>0.52549010515213013</real>
 												<key>Red Component</key>
-												<real>0.7058824896812439</real>
+												<real>0.82745110988616943</real>
 											</dict>
 											<key>Ansi 14 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.70588225126266479</real>
+												<real>0.48627448081970215</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.7098039984703064</real>
+												<real>0.75294119119644165</real>
 												<key>Red Component</key>
-												<real>0.58823537826538086</real>
+												<real>0.55686277151107788</real>
 											</dict>
 											<key>Ansi 15 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.96078437566757202</real>
+												<real>0.78039216995239258</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.94509798288345337</real>
+												<real>0.94509810209274292</real>
 												<key>Red Component</key>
-												<real>0.93725490570068359</real>
+												<real>0.98431378602981567</real>
 											</dict>
 											<key>Ansi 2 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.54901951551437378</real>
+												<real>0.14901953935623169</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.74509817361831665</real>
+												<real>0.7333332896232605</real>
 												<key>Red Component</key>
-												<real>0.63921576738357544</real>
+												<real>0.721568763256073</real>
 											</dict>
 											<key>Ansi 3 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.54509800672531128</real>
+												<real>0.18431368470191956</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.79607844352722168</real>
+												<real>0.74117642641067505</real>
 												<key>Red Component</key>
-												<real>0.92156857252120972</real>
+												<real>0.98039215803146362</real>
 											</dict>
 											<key>Ansi 4 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.70196080207824707</real>
+												<real>0.59607839584350586</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.63137257099151611</real>
+												<real>0.64705884456634521</real>
 												<key>Red Component</key>
-												<real>0.56078433990478516</real>
+												<real>0.51372557878494263</real>
 											</dict>
 											<key>Ansi 5 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.67843133211135864</real>
+												<real>0.60784310102462769</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.55686271190643311</real>
+												<real>0.52549010515213013</real>
 												<key>Red Component</key>
-												<real>0.7058824896812439</real>
+												<real>0.82745110988616943</real>
 											</dict>
 											<key>Ansi 6 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.70588225126266479</real>
+												<real>0.48627448081970215</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.7098039984703064</real>
+												<real>0.75294119119644165</real>
 												<key>Red Component</key>
-												<real>0.58823537826538086</real>
+												<real>0.55686277151107788</real>
 											</dict>
 											<key>Ansi 7 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.80784302949905396</real>
+												<real>0.63137263059616089</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.77254897356033325</real>
+												<real>0.76862746477127075</real>
 												<key>Red Component</key>
-												<real>0.75294119119644165</real>
+												<real>0.83529424667358398</real>
 											</dict>
 											<key>Ansi 8 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.49411755800247192</real>
+												<real>0.32941171526908875</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.45098036527633667</real>
+												<real>0.36078426241874695</real>
 												<key>Red Component</key>
-												<real>0.39607852697372437</real>
+												<real>0.39999997615814209</real>
 											</dict>
 											<key>Ansi 9 Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.4156862199306488</real>
+												<real>0.20392152667045593</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.38039213418960571</real>
+												<real>0.28627443313598633</real>
 												<key>Red Component</key>
-												<real>0.74901968240737915</real>
+												<real>0.98431378602981567</real>
 											</dict>
 											<key>BM Growl</key>
 											<true/>
@@ -1435,13 +1441,13 @@
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.23137250542640686</real>
+												<real>0.15686270594596863</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.18823531270027161</real>
+												<real>0.15686270594596863</real>
 												<key>Red Component</key>
-												<real>0.16862747073173523</real>
+												<real>0.15686273574829102</real>
 											</dict>
 											<key>Background Image Location</key>
 											<string></string>
@@ -1467,13 +1473,13 @@
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.80784302949905396</real>
+												<real>0.63137263059616089</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.77254897356033325</real>
+												<real>0.76862746477127075</real>
 												<key>Red Component</key>
-												<real>0.75294119119644165</real>
+												<real>0.83529424667358398</real>
 											</dict>
 											<key>Character Encoding</key>
 											<integer>4</integer>
@@ -1488,13 +1494,13 @@
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.80784302949905396</real>
+												<real>0.63137263059616089</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.77254897356033325</real>
+												<real>0.76862746477127075</real>
 												<key>Red Component</key>
-												<real>0.75294119119644165</real>
+												<real>0.83529424667358398</real>
 											</dict>
 											<key>Cursor Guide Color</key>
 											<dict>
@@ -1514,13 +1520,13 @@
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.23137250542640686</real>
+												<real>0.15686270594596863</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.18823531270027161</real>
+												<real>0.15686270594596863</real>
 												<key>Red Component</key>
-												<real>0.16862747073173523</real>
+												<real>0.15686273574829102</real>
 											</dict>
 											<key>Cursor Type</key>
 											<integer>2</integer>
@@ -1541,16 +1547,16 @@
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.80784302949905396</real>
+												<real>0.63137263059616089</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.77254897356033325</real>
+												<real>0.76862746477127075</real>
 												<key>Red Component</key>
-												<real>0.75294119119644165</real>
+												<real>0.83529424667358398</real>
 											</dict>
 											<key>Guid</key>
-											<string>AA964D58-6C62-4253-A73A-D6541708BAAE</string>
+											<string>F90B54AA-9B18-4018-BF16-147DCACA9E2C</string>
 											<key>Horizontal Spacing</key>
 											<real>1</real>
 											<key>Idle Code</key>
@@ -1863,11 +1869,11 @@
 											<key>Name</key>
 											<string></string>
 											<key>Non Ascii Font</key>
-											<string>InconsolataForPowerline 14</string>
+											<string>SourceCodeProForPowerline-Medium 12</string>
 											<key>Non-ASCII Anti Aliased</key>
 											<true/>
 											<key>Normal Font</key>
-											<string>InconsolataForPowerline 14</string>
+											<string>SourceCodeProForPowerline-Medium 12</string>
 											<key>Option Key Sends</key>
 											<integer>0</integer>
 											<key>Original Guid</key>
@@ -1887,26 +1893,26 @@
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.80784302949905396</real>
+												<real>0.63137263059616089</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.77254897356033325</real>
+												<real>0.76862746477127075</real>
 												<key>Red Component</key>
-												<real>0.75294119119644165</real>
+												<real>0.83529424667358398</real>
 											</dict>
 											<key>Selection Color</key>
 											<dict>
 												<key>Alpha Component</key>
 												<real>1</real>
 												<key>Blue Component</key>
-												<real>0.39999988675117493</real>
+												<real>0.270588219165802</real>
 												<key>Color Space</key>
 												<string>sRGB</string>
 												<key>Green Component</key>
-												<real>0.35686272382736206</real>
+												<real>0.2862744927406311</real>
 												<key>Red Component</key>
-												<real>0.30980390310287476</real>
+												<real>0.31372550129890442</real>
 											</dict>
 											<key>Send Code When Idle</key>
 											<false/>
@@ -1918,19 +1924,6 @@
 											<integer>0</integer>
 											<key>Sync Title</key>
 											<false/>
-											<key>Tab Color</key>
-											<dict>
-												<key>Alpha Component</key>
-												<real>1</real>
-												<key>Blue Component</key>
-												<real>0.20000000000000001</real>
-												<key>Color Space</key>
-												<string>sRGB</string>
-												<key>Green Component</key>
-												<real>0.15686275064945221</real>
-												<key>Red Component</key>
-												<real>0.0</real>
-											</dict>
 											<key>Tags</key>
 											<array/>
 											<key>Terminal Type</key>
@@ -1946,9 +1939,9 @@
 											<key>Use Italic Font</key>
 											<true/>
 											<key>Use Non-ASCII Font</key>
-											<false/>
-											<key>Use Tab Color</key>
 											<true/>
+											<key>Use Tab Color</key>
+											<false/>
 											<key>Vertical Spacing</key>
 											<real>1</real>
 											<key>Visual Bell</key>
@@ -1965,10 +1958,7 @@
 										<key>Commands</key>
 										<array/>
 										<key>Directories</key>
-										<array>
-											<string>/Users/raghav</string>
-											<string>/Users/raghav</string>
-										</array>
+										<array/>
 										<key>Environment</key>
 										<dict>
 											<key>PWD</key>
@@ -1981,7 +1971,7 @@
 										<key>Program</key>
 										<dict>
 											<key>Command</key>
-											<string>login -fp "raghav"</string>
+											<string>login -fqp "raghav"</string>
 											<key>Type</key>
 											<string>Command</string>
 										</dict>
@@ -1990,7 +1980,7 @@
 										<key>Session Default Name</key>
 										<string></string>
 										<key>Session GUID</key>
-										<string>BBBC57CA-8E24-4976-A8B3-D273A4E27AE5</string>
+										<string>9866D7A8-CE61-4D76-8CCB-2C48A0E56024</string>
 										<key>Session Name</key>
 										<string></string>
 										<key>Shell Integration Ever Used</key>
@@ -2034,7 +2024,7 @@
 					</dict>
 				</array>
 				<key>TerminalGuid</key>
-				<string>pty-647836C6-8871-4CC5-A7E2-FE426C2D5CE0</string>
+				<string>pty-B80D39A7-C3B6-4C35-833F-78910A311F8F</string>
 				<key>Width</key>
 				<real>1440</real>
 				<key>Window Type</key>
