--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,10 +22,10 @@ bind r source-file ~/.tmux.conf
 
 # Enable mouse mode
 set -g mouse on
-# bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-# bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-# bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
-# bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # Prevent renaming of windows automatically
 set-option -g allow-rename off
@@ -53,6 +53,6 @@ set -g pane-active-border-fg colour39
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
+set -g status-left '#[fg=colour235,bg=colour252,bold] #S '
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
+set -g window-status-current-format "#[fg=colour25,bg=colour39,noreverse,bold] #I #W "
