tmux: Fix window automatic-rename

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,30 +11,30 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# Vim style pane selection
+# vim style pane selection
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
 # reload config file
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf; display "Reloaded ~/.tmux.conf"
 
-# Enable mouse mode
+# enable mouse mode
 set -g mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
-# Prevent renaming of windows automatically
-set-option -g allow-rename off
+# prevent renaming of windows automatically
+setw -g automatic-rename off
 
-# Prompts when renaming windows/sessions
+# prompts when renaming windows/sessions
 unbind-key ','
-bind-key ',' command-prompt -I '#W' -p 'Rename window>' "rename-window '%%'"
+bind-key ',' command-prompt -I '#W' -p 'Rename window:' "rename-window '%%'"
 unbind-key '$'
-bind-key '$' command-prompt -I '#S' -p 'Rename session>' "rename-session '%%'"
+bind-key '$' command-prompt -I '#S' -p 'Rename session:' "rename-session '%%'"
 
 # start window number with 1
 set -g base-index 1
