tmux: copy mode bindings to yank to clipboard
Vim-style copy mode bindings. 'v' starts selection, with 'r'
toggling block selection. 'y' yanks to clipboard, whereas 'Enter' yanks
to tmux paste buffer.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# reload config file
+bind r source-file ~/.tmux.conf; display "Reloaded ~/.tmux.conf"
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -17,8 +20,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# reload config file
-bind r source-file ~/.tmux.conf; display "Reloaded ~/.tmux.conf"
+# copy mode yank to clipboard
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy'
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # enable mouse mode
 set -g mouse on
@@ -26,6 +31,7 @@ bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # prevent renaming of windows automatically
 setw -g automatic-rename off
