--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,7 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # reload config file
-bind r source-file ~/.tmux.conf; display "Reloaded ~/.tmux.conf"
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 # split panes using | and -
 bind | split-window -h
